--- a/SportsOrganizer.Server/Pages/Account/Login.razor
+++ b/SportsOrganizer.Server/Pages/Account/Login.razor
@@ -1,4 +1,41 @@
 ﻿@page "/Account/Login"
 @inherits LoginBase
+@layout LoginLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
+
+    <AuthorizeView>
+        <NotAuthorized>
+            <div class="login w-100 d-flex justify-content-center align-items-center">
+                <div class="d-flex flex-column align-items-center">
+                    <h1>@Localizer["LoginTitle"]</h1>
+                    <div class="login-form">
+                        <div class="form-group">
+                            <Validation Validator="ValidationRule.IsNotEmpty">
+                                <Label Margin="Margin.Is3.FromTop">@Localizer["Username"]</Label>
+                                <TextEdit @bind-Text="Username" Class="input-border">
+                                    <Feedback>
+                                        <ValidationError>@Localizer["UsernameError"]</ValidationError>
+                                    </Feedback>
+                                </TextEdit>
+                            </Validation>
+                        </div>
+                        <div class="form-group mt-4">
+                            <Validation Validator="ValidationRule.IsNotEmpty">
+                                <Label Margin="Margin.Is3.FromTop">@Localizer["Password"]</Label>
+                                <TextEdit @bind-Text="Password" Role="TextRole.Password" Class="input-border">
+                                    <Feedback>
+                                        <ValidationError>@Localizer["PasswordError"]</ValidationError>
+                                    </Feedback>
+                                </TextEdit>
+                            </Validation>
+                        </div>
+                        <Button Color="Color.Primary" Clicked="TryLogin" Margin="Margin.Is4.FromTop">@Localizer["BtnTryLogin"]</Button>
+                        <div>
+                            <Label TextColor="TextColor.Danger" Margin="Margin.Is3.FromTop">@ErrorMessage</Label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </NotAuthorized>
+    </AuthorizeView>
