--- a/SportsOrganizer.Server/Shared/LoginLayout.razor.css
+++ b/SportsOrganizer.Server/Shared/LoginLayout.razor.css
@@ -1,4 +1,4 @@
-.page {
+﻿.page {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -6,8 +6,4 @@
 
 main {
     flex: 1;
-}
-
-main {
-    padding-top: calc(2rem + var(--navbar-height));
 }
