--- a/SportsOrganizer.Server/Shared/MainLayout.razor
+++ b/SportsOrganizer.Server/Shared/MainLayout.razor
@@ -1,5 +1,5 @@
-﻿@using SportsOrganizer.Server.Components.MainComponents.FooterComponent
-@using SportsOrganizer.Server.Components.MainComponents.HeaderComponent
+﻿@using SportsOrganizer.Server.Components.LayoutComponents.FooterComponent
+@using SportsOrganizer.Server.Components.LayoutComponents.HeaderComponent
 @inherits LayoutComponentBase
 
 <PageTitle>SportsOrganizer</PageTitle>
