--- a/SportsOrganizer.Server/Pages/Setup.razor
+++ b/SportsOrganizer.Server/Pages/Setup.razor
@@ -14,7 +14,7 @@
                 ErrorIcon="fa fa-bug"
                 ShowProgressBar="true" />
 
-<PageTitle>Sports Organizer Installer</PageTitle>
+<PageTitle>@Localizer["PageTitle"]</PageTitle>
 
 <section class="w-100 min-vh-100 d-flex justify-content-center align-items-center">
     <div class="w-100 d-flex flex-column align-items-center justify-content-center">
