--- a/SportsOrganizer.Server/Pages/Index.razor
+++ b/SportsOrganizer.Server/Pages/Index.razor
@@ -3,8 +3,49 @@
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
 
-<h1>Hello, world!</h1>
+<div>
+    @if (!string.IsNullOrWhiteSpace(Homepage))
+    {
+        @((MarkupString)Homepage)
+    }
+    else
+    {
+        @((MarkupString)"")
+    }
+</div>
 
-Welcome to your new app.
-
-<a href="/Activities">Go to activities</a>
+<div class="mt-5" style="overflow-x:auto;">
+    <table class="table table-hover">
+        <thead class="@TableColor">
+            <tr>
+                <th scope="col" rowspan="2">@Localizer["Place"]</th>
+                <th scope="col" rowspan="2">@Localizer["NumberOfPoints"]</th>
+                <th scope="col" rowspan="2">@Localizer["Team"]</th>
+                <th scope="col" colspan="@NumberOfActivities">@Localizer["PlaceAchieved"]</th>
+            </tr>
+            <tr>
+                @for (var i = 1; i <= NumberOfActivities; i++)
+                {
+                    <th scope="col">@(i).</th>
+                }
+            </tr>
+        </thead>
+        <tbody>
+            @if (ActivityResultScores != null)
+            {
+                @foreach (var activityResultScore in ActivityResultScores)
+                {
+                    <tr>
+                        <td>@(activityResultScore.Place).</td>
+                        <td>@activityResultScore.Points</td>
+                        <td>@activityResultScore.Team.Name</td>
+                        @foreach (int place in activityResultScore.ActivityPlaces)
+                        {
+                            <td>@(place != 0 ? $"{place}." : "-")</td>
+                        }
+                    </tr>
+                }
+            }
+        </tbody>
+    </table>
+</div>
