--- a/SportsOrganizer.Server/Components/LayoutComponents/HeaderComponent/Header.razor
+++ b/SportsOrganizer.Server/Components/LayoutComponents/HeaderComponent/Header.razor
@@ -1,7 +1,7 @@
 ﻿@using System.Security.Claims;
 @inherits HeaderBase
 
-<nav class="navbar navbar-expand-lg @(NavbarColor) w-100 px-sm-5 navbar-custom" style="position: absolute; top: 0;">
+<nav class="navbar navbar-expand-xl @(NavbarColor) w-100 px-sm-5 navbar-custom" style="position: absolute; top: 0;">
     <div class="container-fluid navbar-padding">
         <a class="navbar-brand" href="/">@Title</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
