Change footer and Scoring service.

--- a/SportsOrganizer.Server/Shared/MainLayout.razor
+++ b/SportsOrganizer.Server/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
 
 <div class="page w-100 min-vh-100">
     <Header />
-    <main>
+    <main class="my-5">
         <article class="content px-4 container">
             @Body
         </article>
