--- a/SportsOrganizer.Server/_Imports.razor
+++ b/SportsOrganizer.Server/_Imports.razor
@@ -12,6 +12,7 @@
 @using SportsOrganizer.Server.Services
 @using Blazorise
 @using Blazorise.SpinKit
+@using Blazorise.DataGrid
 @using SportsOrganizer.Server.Enums
 @using Microsoft.AspNetCore.Http
 @using Microsoft.Extensions.Localization
