Change ActivityResultsOverview page and other files.

--- a/SportsOrganizer.Server/App.razor
+++ b/SportsOrganizer.Server/App.razor
@@ -20,3 +20,5 @@
                 SuccessIcon="fa fa-thumbs-up"
                 ErrorIcon="fa fa-bug"
                 ShowProgressBar="true" />
+
+<ModalProvider Centered Scrollable />
