--- a/SportsOrganizer.Server/Pages/User/ActivityResultsOverview.razor
+++ b/SportsOrganizer.Server/Pages/User/ActivityResultsOverview.razor
@@ -1,4 +1,91 @@
-﻿@page "/User/Activity-Results-Overview"
+﻿@page "/User/Activity-Results-Overview/{ActivityId:int}"
+@using SportsOrganizer.Data.Models;
 @inherits ActivityResultsOverviewBase
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
+
+<h1 class="text-center">@($"{Activity.ActivityNumber}. {Localizer["Activity"]}: {Activity.Title}")</h1>
+<hr />
+<div class="row">
+    <div class="mt-4 col-12">
+        <DataGrid Data="ActivityResults"
+                        Responsive
+                        ShowPager
+                        ShowPageSizes
+                  PagerPosition="DataGridPagerPosition.Bottom"
+                  PagerOptions="new(){ ButtonSize=Size.Small }"
+                        Sortable
+                  SortMode="DataGridSortMode.Single"
+                        Resizable
+                  ResizeMode="TableResizeMode.Header"
+                        Editable
+                        Striped
+                        Bordered
+                        Hoverable
+                  HeaderThemeContrast="ThemeContrast"
+                        Filterable
+                  FilterMethod="DataGridFilterMethod.Contains">
+
+            <DataGridColumns>
+                <DataGridColumn Caption="@Localizer["EditData"]" TextAlignment="TextAlignment.Center" Width="275px">
+                    <DisplayTemplate>
+                        @{
+                            var activityResultId = (context as ActivityResultModel)?.Id;
+                        }
+                        <Button Color="Color.Warning" Margin="Margin.Is1.FromBottom" Clicked="@(() => OpenEditModal(activityResultId ?? default(int)))">@Localizer["BtnEdit"]</Button>
+                        <Button Color="Color.Danger" Margin="Margin.Is1.FromBottom" Clicked="@(() => OpenDeleteModal(activityResultId ?? default(int)))">@Localizer["BtnDelete"]</Button>
+                    </DisplayTemplate>
+                </DataGridColumn>
+                <DataGridColumn Field="@nameof(ActivityResultModel.Id)" Caption="@Localizer["UniqueIdentifier"]" />
+                <DataGridColumn Caption="@Localizer["TeamName"]">
+                    <DisplayTemplate>
+                        @{
+                            var teamId = (context as ActivityResultModel)?.TeamId;
+                            var team = Teams.FirstOrDefault(x => x.Id == teamId);
+
+                            @(team.Name)
+                        }
+                    </DisplayTemplate>
+                </DataGridColumn>
+                @if (Activity.NumberOfPlayers > 1)
+                {
+                    for (int i = 0; i < Activity.NumberOfPlayers; i++)
+                    {
+                        <DataGridColumn Caption="@($"{i+1} {Localizer["Player"]}")">
+                            <DisplayTemplate>
+                                @{
+                                    var activityResultId = (context as ActivityResultModel)?.Id;
+                                    var playerResults = PlayerResults.Where(x => x.ActivityResultId == activityResultId).ToList();
+
+                                    if (playerResults.Count >= i + 1)
+                                    {
+                                        var playerResult = playerResults[i];
+                                        @($"{playerResult.Result}")
+                                    }
+                                    else
+                                    {
+                                        @("-")
+                                    }
+                                }
+                            </DisplayTemplate>
+                        </DataGridColumn>
+                    }
+                }
+                <DataGridColumn Field="@nameof(ActivityResultModel.Result)" Caption="@Localizer["Result"]" />
+            </DataGridColumns>
+            <PageButtonTemplate>
+                <Span TextColor="TextColor.Success">
+                    @context.PageNumber
+                </Span>
+            </PageButtonTemplate>
+            <NextPageButtonTemplate><Icon Name="IconName.StepForward" TextColor="TextColor.Success" /></NextPageButtonTemplate>
+            <PreviousPageButtonTemplate><Icon Name="IconName.StepBackward" TextColor="TextColor.Success" /></PreviousPageButtonTemplate>
+            <LastPageButtonTemplate><Icon Name="IconName.Forward" TextColor="TextColor.Success" /></LastPageButtonTemplate>
+            <FirstPageButtonTemplate><Icon Name="IconName.Backward" TextColor="TextColor.Success" /></FirstPageButtonTemplate>
+            <TotalItemsTemplate><Badge Color="Color.Success">@context.TotalItems @Localizer["totalItems"]</Badge></TotalItemsTemplate>
+            <TotalItemsShortTemplate><Badge Color="Color.Success">@context.TotalItems</Badge></TotalItemsShortTemplate>
+            <ItemsPerPageTemplate></ItemsPerPageTemplate>
+        </DataGrid>
+        <Button Margin="Margin.Is3.FromTop" Color="Color.Success" Type="ButtonType.Link" To=@($"/User/Insert-Activity-Results/{Activity.Id}")>@Localizer["BtnNew"]</Button>
+    </div>
+</div>
